# aegis-crm-standardv1

./: .gitattributes  .gitignore  AGENT_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SPEC.md  START_AGENT.md  STRUCTURE.md
.github/: PUSH_PROTECTION.md
.github/workflows/: ci.yml
Spec/: design.md  requirements.md  tasks.md
crates/aegis-crm-cli/: Cargo.toml
crates/aegis-crm-cli/src/: error.rs  main.rs
crates/aegis-crm-cli/src/commands/: inspect.rs  issue.rs  mod.rs  pop.rs  user.rs  vendor.rs
crates/aegis-crm-cli/src/utils/: io.rs  mod.rs  payload.rs
crates/aegis-crm-core/: Cargo.toml
crates/aegis-crm-core/examples/: generate_fixtures.rs
crates/aegis-crm-core/src/: cert.rs  crypto.rs  errors.rs  keys.rs  lib.rs  pop.rs  verify.rs
crates/aegis-crm-core/tests/: integration_test.rs
docs/: API.md  CLI.md  SECURITY.md  STRUCTURE.md
examples/payloads/: campus.json  lifetime_pro.json
fixtures/: README.md  license.cert.base64  license_payload.json  user_pub.hex  vendor_pub.hex
internal/docs/: DOD.md  QUALITY.md  README.md  TASKS.md
