[package]
name = "aegis-crm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Aegis CRM Standard v1.0 - Cryptographic Rights Management (Offline-first Licensing)"
keywords = ["cryptography", "licensing", "crm", "offline", "secp256k1"]
categories = ["cryptography", "authentication"]

[dependencies]
# Cryptography
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha2 = "0.10"

# Random number generation
rand_core = "0.6"
getrandom = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
ciborium = "0.2"

# Error handling
thiserror = "2"

[dev-dependencies]
hex = "0.4"
serde_json = "1"
base64 = "0.22"
